# py-eagle-200

./: .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  setup.py  tox.ini
.github/workflows/: github-ci.yml
libeagle/: __init__.py  connection.py
src/libeagle/: connection.py
tests/: test_eagle200.py
tests/simulator/: eagle200sim.py
